traversing an external file

--- a/traversing file/traverse.ipynb
+++ b/traversing file/traverse.ipynb
@@ -102,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -331,7 +333,6 @@
     "<ol>\n",
     "    <li>Identify missing data</li>\n",
     "    <li>Deal with missing data</li>\n",
-    "    <li>Correct data format</li>\n",
     "</ol>\n"
    ]
   },
